--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ hs_err_pid*
 /mock/TestRun-compare
 /test/
 /mock/Template_Copy-Only/publisher/media-a/media/MyMovies/2 Guns (2013)/
+/deploy/cp-to-plex
