--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ hs_err_pid*
 /mock/*.json
 /mock/scripts/linux/89-23-Navigator-rockplex.sh
 /deploy/ELS-nav.jar
+/mock/scripts/linux/90-00-RockPlex-timeout.sh
