#46 Partial updater, not functional yet

--- a/.gitignore
+++ b/.gitignore
@@ -11,17 +11,18 @@ hs_err_pid*
 /deploy/ELS-nav.jar
 /deploy/Thumbs.db
 /mock/*.json
+/mock/bin/
 /mock/datastore/
 /mock/jobs/
 /mock/libraries/
 /mock/local/
 /mock/output/
 /mock/private/
+/mock/rt/
 /mock/scripts/linux/9*
 /mock/scripts/windows/9*
 /mock/system/
 /mock/test/
 /mock/tools/
+/mock/ELS-Navigator*
 /out
-/mock/capture/
-/mock/capture-ds/
