--- a/els.properties
+++ b/els.properties
@@ -1,3 +1,3 @@
 jdk.home.1.8=/usr/lib/jvm/java-8-openjdk-amd64
 els.version.name=4.0.0-development
-els.version.number=400000
+els.deploy.url=https://github.com/GrokSoft/ELS/raw/Version-4.0.0/deploy
