#68 Progress on GitHub Pages website

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -12,6 +12,7 @@ discussions_url: https://github.com/Corionis/ELS/discussions
 documentation_url: https://github.com/Corionis/ELS/wiki
 download_url: https://github.com/Corionis/ELS/wiki/Downloads
 issues_url: https://github.com/Corionis/ELS/issues
+project_url: https://github.com/Corionis/ELS
 
 # --- Generated below this line --- #
 version: 4.0.0-development
