--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 remote_theme: pages-themes/leap-day@v0.2.0
 title: ELS - Entertainment Library Synchronizer
-description: Library & Title Data Management & Back-Up
+description: Library Data Management & Back-Up
 excerpt_separator: thisnevermatchme
 # google_analytics: G-FRDK1DDGH2
 show_downloads: true
