--- a/artifacts/stage/_config.yml
+++ b/artifacts/stage/_config.yml
@@ -1,9 +1,10 @@
 remote_theme: pages-themes/leap-day@v0.2.0
 title: ELS - Entertainment Library Synchronizer
-description: Library & Title Data Management & Back-Up
+description: Library-Based Data Management & Back-Up
 excerpt_separator: thisnevermatchme
-# google_analytics: G-FRDK1DDGH2
 show_downloads: true
+
+exclude: [ artifacts ]
 plugins:
   - jekyll-remote-theme
 
