--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,8 +2,9 @@ remote_theme: pages-themes/leap-day@v0.2.0
 title: ELS - Entertainment Library Synchronizer
 description: Library-Based Data Management & Back-Up
 excerpt_separator: thisnevermatchme
-# google_analytics: G-FRDK1DDGH2
 show_downloads: true
+
+exclude: [ artifacts ]
 plugins:
   - jekyll-remote-theme
 
