--- a/artifacts/stage/_config.yml
+++ b/artifacts/stage/_config.yml
@@ -1,5 +1,5 @@
 remote_theme: pages-themes/leap-day@v0.2.0
-title: ELS - Entertainment Library Synchronizer
+title: Corionis ELS - Entertainment Library Synchronizer
 description: Library-Based Data Management & Back-Up
 excerpt_separator: thisnevermatchme
 show_downloads: true
