#139 Build sequence changes for Linux, Windows and MacOS

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,24 @@
 hs_err_pid*
 
 /.idea/workspace.xml
+/artifacts/stage/linux/ELS/rt/
+/artifacts/stage/macos/ELS/rt/
+/artifacts/stage/windows/rt/
+/build/*.dmg
+/build/*.exe
+/build/*.info
+/build/*.jar
+/build/*.tar.gz
+/build/*.zip
+/build/ELS.app/
 /deploy/ELS-nav.jar
 /deploy/Thumbs.db
+/docs/_site/
+/docs/artifacts/.~lock.scenarios.odg#
 /mock/*.json
+/mock/ELS-Navigator*
+/mock/License.txt
+/mock/Notice.txt
 /mock/bin/
 /mock/datastore/
 /mock/jobs/
@@ -24,18 +39,4 @@ hs_err_pid*
 /mock/system/
 /mock/test/
 /mock/tools/
-/mock/ELS-Navigator*
 /out
-/mock/License.txt
-/mock/Notice.txt
-/artifacts/stage/linux/ELS/rt/
-/artifacts/stage/macos/ELS/rt/
-/artifacts/stage/windows/rt/
-/build/*.info
-/build/*.jar
-/build/*.tar.gz
-/build/*.zip
-/docs/_site/
-/docs/artifacts/.~lock.scenarios.odg#
-/build/ELS.app/
-/build/ELS.dmg
