--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,3 @@
 # These are supported funding model platforms
 
-ko_fi: elsnavigator
-custom: ["https://ko-fi.com/elsnavigator", ko-fi.com]
+custom: https://ko-fi.com/elsnavigator/
