--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -12,6 +12,7 @@ plugins:
 discussions_url: https://github.com/Corionis/ELS/discussions
 documentation_url: https://github.com/Corionis/ELS/wiki
 download_url: https://github.com/Corionis/ELS/wiki/Downloads
+home_url: https://github.com/Corionis
 issues_url: https://github.com/Corionis/ELS/issues
 milestones_url: https://github.com/Corionis/ELS/milestones
 milestones4_url: https://github.com/Corionis/ELS/milestone/1
