Fixed a Windows path handling bug related to #180, see Changelist

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ hs_err_pid*
 /deploy/Thumbs.d?
 /docs/_site/
 /.idea/workspace.xm?
-/mock/bin/ELS.ja?
+/mock/bin/
 /mock/datastore/
 /mock/datastore-backup/
 /mock/ELS-Navigator*
