--- a/els.properties
+++ b/els.properties
@@ -1,6 +1,6 @@
 els.version.name=4.1.0-development
-els.deploy.url=https://raw.githubusercontent.com/Corionis/ELS/master/deploy
-els.changes.url=https://raw.githubusercontent.com/Corionis/ELS/master/deploy/changes.html
+els.deploy.url=https://raw.githubusercontent.com/Corionis/ELS/Version-4.1.0/deploy
+els.changes.url=https://raw.githubusercontent.com/Corionis/ELS/Version-4.1.0/deploy/changes.html
 
 # els.build.flags may be set with the following "flags" as needed.
 # Do not include els.build.flags if none are needed.
