--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,56 @@ hs_err_pid*
 !/mock/bin/els-logo-98px.png
 
 /mock/._.DS_Store
+/docs/docs/_site/assets/css/style.css
+/docs/docs/_site/assets/fonts/copse-regular-webfont.eot
+/docs/docs/_site/assets/fonts/copse-regular-webfont.svg
+/docs/docs/_site/assets/fonts/copse-regular-webfont.ttf
+/docs/docs/_site/assets/fonts/copse-regular-webfont.woff
+/docs/docs/_site/assets/fonts/quattrocentosans-bold-webfont.eot
+/docs/docs/_site/assets/fonts/quattrocentosans-bold-webfont.svg
+/docs/docs/_site/assets/fonts/quattrocentosans-bold-webfont.ttf
+/docs/docs/_site/assets/fonts/quattrocentosans-bold-webfont.woff
+/docs/docs/_site/assets/fonts/quattrocentosans-bolditalic-webfont.eot
+/docs/docs/_site/assets/fonts/quattrocentosans-bolditalic-webfont.svg
+/docs/docs/_site/assets/fonts/quattrocentosans-bolditalic-webfont.ttf
+/docs/docs/_site/assets/fonts/quattrocentosans-bolditalic-webfont.woff
+/docs/docs/_site/assets/fonts/quattrocentosans-italic-webfont.eot
+/docs/docs/_site/assets/fonts/quattrocentosans-italic-webfont.svg
+/docs/docs/_site/assets/fonts/quattrocentosans-italic-webfont.ttf
+/docs/docs/_site/assets/fonts/quattrocentosans-italic-webfont.woff
+/docs/docs/_site/assets/fonts/quattrocentosans-regular-webfont.eot
+/docs/docs/_site/assets/fonts/quattrocentosans-regular-webfont.svg
+/docs/docs/_site/assets/fonts/quattrocentosans-regular-webfont.ttf
+/docs/docs/_site/assets/fonts/quattrocentosans-regular-webfont.woff
+/docs/docs/_site/assets/images/advanced-ways.png
+/docs/docs/_site/assets/images/background.png
+/docs/docs/_site/assets/images/basic-ways.png
+/docs/docs/_site/assets/images/body-background.png
+/docs/docs/_site/assets/images/bullet.png
+/docs/docs/_site/assets/images/els-logo-72px.png
+/docs/docs/_site/assets/images/game-dev-01.png
+/docs/docs/_site/assets/images/game-dev-02.png
+/docs/docs/_site/assets/images/hr.gif
+/docs/docs/_site/assets/images/link.png
+/docs/docs/_site/assets/images/media-server-01.png
+/docs/docs/_site/assets/images/media-server-02.png
+/docs/docs/_site/assets/images/octocat-logo.svg
+/docs/docs/_site/assets/images/swoop-up-arrow.png
+/docs/docs/_site/assets/images/video-dev-01.png
+/docs/docs/_site/assets/images/video-dev-02.png
+/docs/docs/_site/assets/js/main.js
+/docs/docs/_site/changes.html
+/docs/docs/_site/downloads.html
+/docs/docs/_site/favicon.ico
+/docs/docs/_site/features.html
+/docs/docs/_site/features.md
+/docs/docs/_site/Gemfile
+/docs/docs/_site/Gemfile.lock
+/docs/docs/_site/index.html
+/docs/docs/_site/Posts.html
+/docs/docs/_site/privacy.html
+/docs/docs/_site/privacy.md
+/docs/docs/_site/README.md
+/docs/docs/_site/screenshots.html
+/docs/docs/_site/screenshots.md
+/docs/docs/_site/serve
